argocd-app-config/prod/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    #spec:
    #  containers:
      #- name: nginx
      # image: nginx
      #  ports:
      #  - containerPort: 80
      #  readinessProbe:
       #   httpGet:
        #    path: /
        #   port: 80
        #  initialDelaySeconds: 5
        #  periodSeconds: 10
      #  livenessProbe:
        #  httpGet:
        #    path: /
         #   port: 80
        #  initialDelaySeconds: 10
         # periodSeconds: 20
